// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteForm should render NoteForm correctly 1`] = `
<div>
  <form
    action=""
    onSubmit={[Function]}
  >
    <h3>
      Create Note
    </h3>
    <h3>
      Topic:
    </h3>
    <input
      autoFocus={true}
      name="topic"
      onChange={[Function]}
      placeholder="topic"
      type="text"
      value=""
    />
    <h3>
      Description
    </h3>
    <input
      id=""
      name="description"
      onChange={[Function]}
      placeholder="description"
      type="text"
      value=""
    />
    <h3>
      Note
    </h3>
    <textarea
      cols="30"
      id=""
      name="note"
      onChange={[Function]}
      placeholder="write your note here"
      rows="10"
      value=""
    />
    <h3>
      Reference
    </h3>
    <input
      id=""
      name="reference"
      onChange={[Function]}
      placeholder="reference"
      type="text"
      value=""
    />
    <h3>
      Tag
    </h3>
    <input
      name="tag"
      onChange={[Function]}
      placeholder="tag"
      type="text"
      value=""
    />
    <div>
      <button>
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`NoteForm should render NoteForm with a note data correctly 1`] = `
<div>
  <form
    action=""
    onSubmit={[Function]}
  >
    <h3>
      Create Note
    </h3>
    <h3>
      Topic:
    </h3>
    <input
      autoFocus={true}
      name="topic"
      onChange={[Function]}
      placeholder="topic"
      type="text"
      value="redux"
    />
    <h3>
      Description
    </h3>
    <input
      id=""
      name="description"
      onChange={[Function]}
      placeholder="description"
      type="text"
      value="redux note"
    />
    <h3>
      Note
    </h3>
    <textarea
      cols="30"
      id=""
      name="note"
      onChange={[Function]}
      placeholder="write your note here"
      rows="10"
      value="here is a note"
    />
    <h3>
      Reference
    </h3>
    <input
      id=""
      name="reference"
      onChange={[Function]}
      placeholder="reference"
      type="text"
      value="some reference"
    />
    <h3>
      Tag
    </h3>
    <input
      name="tag"
      onChange={[Function]}
      placeholder="tag"
      type="text"
      value="some tag"
    />
    <div>
      <button>
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`NoteForm should render error for invalid form submission 1`] = `
<div>
  <form
    action=""
    onSubmit={[Function]}
  >
    <h3>
      Create Note
    </h3>
    <h3>
      Topic:
    </h3>
    <input
      autoFocus={true}
      name="topic"
      onChange={[Function]}
      placeholder="topic"
      type="text"
      value=""
    />
    <h3>
      Description
    </h3>
    <input
      id=""
      name="description"
      onChange={[Function]}
      placeholder="description"
      type="text"
      value=""
    />
    <h3>
      Note
    </h3>
    <textarea
      cols="30"
      id=""
      name="note"
      onChange={[Function]}
      placeholder="write your note here"
      rows="10"
      value=""
    />
    <h3>
      Reference
    </h3>
    <input
      id=""
      name="reference"
      onChange={[Function]}
      placeholder="reference"
      type="text"
      value=""
    />
    <h3>
      Tag
    </h3>
    <input
      name="tag"
      onChange={[Function]}
      placeholder="tag"
      type="text"
      value=""
    />
    <div>
      <button>
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`NoteForm should render error for invalid form submission 2`] = `
<div>
  <form
    action=""
    onSubmit={[Function]}
  >
    <h3>
      Create Note
    </h3>
    <h3>
      Topic:
    </h3>
    <input
      autoFocus={true}
      name="topic"
      onChange={[Function]}
      placeholder="topic"
      type="text"
      value=""
    />
    <h3>
      Description
    </h3>
    <input
      id=""
      name="description"
      onChange={[Function]}
      placeholder="description"
      type="text"
      value=""
    />
    <h3>
      Note
    </h3>
    <textarea
      cols="30"
      id=""
      name="note"
      onChange={[Function]}
      placeholder="write your note here"
      rows="10"
      value=""
    />
    <h3>
      Reference
    </h3>
    <input
      id=""
      name="reference"
      onChange={[Function]}
      placeholder="reference"
      type="text"
      value=""
    />
    <h3>
      Tag
    </h3>
    <input
      name="tag"
      onChange={[Function]}
      placeholder="tag"
      type="text"
      value=""
    />
    <div>
      <p>
        Please provide topic and description
      </p>
      <button>
        Save
      </button>
    </div>
  </form>
</div>
`;
